corrigindo Issues do sonar